--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:4000/",
+  "proxy": "https://workout-buddy-backend-0u0y.onrender.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
